fixed logo title intertwined with menu button on small screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -273,6 +273,7 @@ div.clickable > .panel:hover {
   overflow: hidden;
   max-width: 80%;
   float: left;
+  padding-left: 50px;
 }
 
 .top-nav {
